# mahjong-review-helper

./: .gitignore  README.md
backend/: pyproject.toml
backend/mahjong_review/: __init__.py  analyzer.py  danger.py  ev.py  hand_value.py  shanten.py  tiles.py
backend/mahjong_review/api/: main.py
backend/mahjong_review/parsers/: __init__.py  majsoul.py  tenhou.py
backend/tests/: test_analyzer.py  test_danger.py  test_ev_cost.py  test_hand_value.py  test_multi_threat.py  test_shanten.py  test_suit_suspicion.py  test_summary.py  test_tenhou_parser.py  test_tiles.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: BoardState.tsx  DangerBar.tsx  DecisionNavigator.tsx  GameSummary.tsx  HandSafety.tsx  LabelBadge.tsx  ReviewCard.tsx  Tile.tsx
frontend/lib/: api.ts  factorHelp.ts
sample_logs/: riichi_defense_demo.json
